# lightning-diffusers

./: .gitignore  README.md  pyproject.toml
configs/: base.yaml
configs/models/: ddpm.yaml
configs/optimizers/: adamw.yaml
configs/trainers/: mnist_ddpm.yaml
src/lightning_diffusers/: __init__.py  cli.py
src/lightning_diffusers/callbacks/: __init__.py  mnist_ddpm_callback.py
src/lightning_diffusers/models/: __init__.py  mnist_ddpm_module.py
wandb/ddpm/: config.yaml
