[project]
name = "lightning-diffusers"
version = "0.1.0"
description = "PyTorch Lightning + Diffusers. A simple and flexible training template for diffusion models."
readme = "README.md"
authors = [
    { name = "Shunsuke KITADA", email = "shunsuke.kitada.0831@gmail.com" },
]
requires-python = ">=3.11"
dependencies = [
    "diffusers[torch]>=0.30.0",
    "jsonargparse[signatures]>=4.27.7",
    "lightning>=2.0.0",
    "torch>=2.0.0",
    "torchvision>=0.15.1",
    "transformers[torch]>=4.30.0",
    "wandb>=0.12.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["mypy>=1.0.0", "pytest>=6.0.0", "ruff>=0.1.5"]

[project.scripts]
lightning-diffusers = "lightning_diffusers.cli:main"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
